- add static half duplex conference
- add dynamic half duplex conference
- add clear channel fax
- add DTMF detection for NULL PLCI
- use direct access to vocoders without RTP framing
- play message to conference and music on hold to caller
- add commands to remove users from chat
- allow to specity the 'ETS 300 102-1' called party number octet 3


chan_capi-1.1.2
------------------
- added config setting 'faxdetecttime' to limit the fax detection for a given amount of seconds.
- added config option for subscriber prefix. Some lines may show local calls without area code
  signaled as subscriber-number. Here the complete prefix including area code must be added.
- better counting of active B-channels.
- make capicommand(progress) "early-B3" usable for non NT-mode incoming channels as well.
- support early Line-Interconnect (bridge) as soon as both B-channels are up. This bridges B-channels
  from beginning of the call-establishment, even before calls are connected and the bridge command is received.
  The dial() option 'G' is used to activate this feature.
- fixed big-endian issue for DATA_B3 messages in internal libcapi code.
- fixed NULL-pointer when no digits are signaled in DID mode.
- adapt to new Asterisk 1.6.1 changes.
- added capicommand to set CAPI application ID into an Asterisk dialplan variable.


chan_capi-1.1.1
------------------
- fixed controller count when creating NULL-PLCI interface.
- simplified check for unused controller.


chan_capi-1.1.0
------------------
- send local DATE/TIME with CONNECT when in NT-mode.
- added transfergroup config option to set controllers allowed for transfer.
- send Sending-Complete if overlap dialing is not used.
- fixed numberingplan for 'connected number'.
- added devicestate option.
- capi-chat can play music-on-hold for first caller.
- adapt to new asterisk 1.6 API
- fixed reading capi profile on big-endian
- increased maximum number of CAPI controllers to 64 (needed for big PBX).