@@ -288,6 +288,7 @@ Deactivate CCBS:
         exten => s,1,capicommand(ccbsstop|${CCLINKAGEID})
 
 Chat (MeetMe/Conference):
+    See also README.media for details!
     If the CAPI card/driver supports it, the caller can be put into a chat-room:
     (This uses the DSPs onboard a Dialogic(R) Diva(R) Rev.2 Media Board.)
         exten => s,1,capicommand(chat|<roomname>|<options>|controller)
@@ -295,6 +296,7 @@ Chat (MeetMe/Conference):
             exten => s,1,capicommand(chat|salesmeeting|m|1,3-6)
     Possible options:
     'm' = The first caller will get music-on-hold until second caller arrives.
+    'h<sec>' = Hangup after <sec> seconds if caller is alone in conference.
     'o' = The caller is operator
     'l' = The caller is listener
 
